; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/drivers/extr_driver_bsd.c_get80211param.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/drivers/extr_driver_bsd.c_get80211param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bsd_driver_data = type { i32 }
%struct.ieee80211req = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bsd_driver_data*, i32)* @get80211param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get80211param(%struct.bsd_driver_data* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.bsd_driver_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ieee80211req, align 4
  store %struct.bsd_driver_data* %0, %struct.bsd_driver_data** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.bsd_driver_data*, %struct.bsd_driver_data** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i64 @bsd_get80211(%struct.bsd_driver_data* %7, %struct.ieee80211req* %6, i32 %8, i32* null, i32 0)
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %15

12:                                               ; preds = %2
  %13 = getelementptr inbounds %struct.ieee80211req, %struct.ieee80211req* %6, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %12, %11
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i64 @bsd_get80211(%struct.bsd_driver_data*, %struct.ieee80211req*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
